# micro

./: .gitignore  README.md
esp32/esp-idf/: .gitignore  README.md
esp32/esp-idf/c/: CMakeLists.txt
esp32/esp-idf/c/main/: CMakeLists.txt
esp32/esp-idf/cxx/: CMakeLists.txt
esp32/esp-idf/cxx/main/: CMakeLists.txt
esp32/pio/: INSTRUCTIONS.md  platformio.ini
esp32/pio/scripts/: include_toolchain.py
esp32/rust/: INSTRUCTIONS.md
esp32/zig/: INSTRUCTIONS.md  flake.nix
esp32/zig/blinky/: build.zig
esp32/zig/blinky/main/: CMakeLists.txt
esp32/zig/blinky/main/esp32/: error.zig  heap.zig  pcnt.zig  segger.zig  uart.zig
esp32/zig/main/esp32/: dsp.zig  gpio.zig  i2c.zig  i2s.zig  lwip.zig  mqtt.zig  panic.zig  rtos.zig  spi.zig
pico/go/: flake.nix  go.mod  justfile  main.go
pico/zig/: flake.nix
pico/zig/src/: pwm.zig
test-esp-idf/: CMakeLists.txt
test-esp-idf/main/: CMakeLists.txt  main.c
test-pio/src/: main.cpp
test-rs/: INSTRUCTIONS.md
test-rs/blinky/: Cargo.toml
test-zig/: INSTRUCTIONS.md
test-zig-pico/: build.zig  build.zig.zon
test-zig-pico/src/: main.zig
test-zig/blinky/: .clangd  CMakeLists.txt  build.zig  build.zig.zon
test-zig/blinky/main/: CMakeLists.txt  app.zig  build.zig  main.zig  root.zig
test-zig/blinky/main/esp32/: bluetooth.zig  bootloader.zig  crc.zig  http.zig  led-strip.zig  logger.zig  phy.zig  wifi.zig
test-zig/blinky/reference/cmake/: zig-build.cmake
