[package]
edition      = "2024"
name         = "blinky"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "blinky"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32"] }


esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }

critical-section = "1.2.0"
esp-println = { version = "0.16.1", features = ["esp32"] }


[profile.dev]
opt-level = "s"

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
