set(DEPS pthread driver)

idf_component_register(SRCS "esp32/empty.c"
    INCLUDE_DIRS "."
    PRIV_REQUIRES "${DEPS}"
)

set(LIB_ARTIFACT "${CMAKE_BINARY_DIR}/../lib/libblinky.a")
target_link_libraries(${COMPONENT_LIB} PRIVATE ${LIB_ARTIFACT})

set(IMPLICIT_INC "$<JOIN:${CMAKE_C_IMPLICIT_INCLUDE_DIRECTORIES},;>")
set(TARGET_INC "$<JOIN:$<TARGET_PROPERTY:${COMPONENT_LIB},INCLUDE_DIRECTORIES>,;>")

set(INCLUDE_PATH_FILE "${CMAKE_BINARY_DIR}/include_dirs.txt")
file(GENERATE 
    OUTPUT "${INCLUDE_PATH_FILE}"
    CONTENT "${TARGET_INC};${IMPLICIT_INC}"
)
